@@ -1,16 +1,14 @@
-// Copyright 2005 Luke J. Kolin. All Rights Reserved.
+// Copyright 2005, 2016 Global Virtual Airlines Group. All Rights Reserved.
 package org.deltava.commands.assign;
 
 import java.util.*;
-import java.sql.Connection;
+import java.util.stream.Collectors;
 
 import org.deltava.beans.Person;
 import org.deltava.beans.assign.AssignmentInfo;
 
 import org.deltava.commands.*;
-
-import org.deltava.dao.GetAssignment;
-import org.deltava.dao.DAOException;
+import org.deltava.dao.*;
 
 import org.deltava.security.command.AssignmentAccessControl;
 
@@ -19,7 +17,7 @@ import org.deltava.util.ComboUtils;
 /**
  * A Web Site Command to display a Pilot's Flight Assignments.
  * @author Luke
- * @version 1.0
+ * @version 7.0
  * @since 1.0
  */
 
@@ -30,16 +28,14 @@ public class MyAssignmentsCommand extends AbstractViewCommand {
     * @param ctx the Command context
     * @throws CommandException if an error occurs
     */
-   public void execute(CommandContext ctx) throws CommandException {
+   @Override
+public void execute(CommandContext ctx) throws CommandException {
       
       // Get the view context
       ViewContext vc = initView(ctx);
-
       try {
-         Connection con = ctx.getConnection();
-         
          // Get the DAO and the equipmentTypes
-         GetAssignment dao = new GetAssignment(con);
+         GetAssignment dao = new GetAssignment(ctx.getConnection());
          ctx.setAttribute("eqTypes", dao.getEquipmentTypes(), REQUEST);
          
          // Set the query start/max
@@ -51,19 +47,11 @@ public class MyAssignmentsCommand extends AbstractViewCommand {
          vc.setResults(results);
          
          // Get the access controllers for the assignments
-         List<AssignmentAccessControl> accessList = new ArrayList<AssignmentAccessControl>(results.size());
-         for (Iterator<AssignmentInfo> i = results.iterator(); i.hasNext(); ) {
-         	AssignmentInfo ai = i.next();
-         	
-         	// Calculate access to this flight assignment
-            AssignmentAccessControl access = new AssignmentAccessControl(ctx, ai);
-            access.validate();
-            accessList.add(access);
-         }
+         List<AssignmentAccessControl> accessList = results.stream().map(ai -> { AssignmentAccessControl access = new AssignmentAccessControl(ctx, ai); access.validate(); return access; }).collect(Collectors.toList());
          
          // Save dummy map of pilot IDs - the only one we need to add is our own
          Map<Integer, Person> pilots = new HashMap<Integer, Person>();
-         pilots.put(new Integer(ctx.getUser().getID()), ctx.getUser());
+         pilots.put(Integer.valueOf(ctx.getUser().getID()), ctx.getUser());
          ctx.setAttribute("pilots", pilots, REQUEST);
          
          // Save statuses and access controllers
